# cogs118b

./: .gitignore  README.md  main.ipynb  preprocess.py  pyproject.toml  requirements.txt
datasets/UNSW-NB15/: UNSW-NB15.parquet  UNSW-NB15_normalized.parquet
